src/test/deca/context/invalid/SansObjet/DeclVar-Minus-int-boolean-float.deca
// Description:
//    Declaration of a int variable using - operation between a boolean variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    float y = 1.5; 
    int z = false - 1.5; 
}
